--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,6 @@
 *.iml
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
+/.idea
 /build
-/captures
-.externalNativeBuild
-.cxx
+/app/build
 local.properties
-
-# Project exclude paths
-/app/build/
-/app/build/intermediates/javac/debug/classes/
