--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,5 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation project(":logeukes")
 }
