--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,19 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.0-beta02' apply false
-    id 'com.android.library' version '7.1.0-beta02' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath 'io.github.gradle-nexus:publish-plugin:1.1.0'
+    }
 }
+
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+apply from: "${rootDir}/scripts/publish-root.gradle"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
