--- a/logeukes/build.gradle
+++ b/logeukes/build.gradle
@@ -1,7 +1,25 @@
 plugins {
     id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
 }
+
+ext {
+    PUBLISH_GROUP_ID = 'io.github.jisungbin'
+    PUBLISH_VERSION = '1.0.0'
+    PUBLISH_ARTIFACT_ID = 'logeukes'
+    PUBLISH_DESCRIPTION = 'android logcat'
+    PUBLISH_URL = 'https://github.com/jisungbin/logeukes'
+    PUBLISH_LICENSE_NAME = 'MIT License'
+    PUBLISH_LICENSE_URL = 'https://github.com/jisungbin/logeukes/blob/master/LICENSE'
+    PUBLISH_DEVELOPER_ID = 'jisungbin'
+    PUBLISH_DEVELOPER_NAME = 'Ji Sungbin'
+    PUBLISH_DEVELOPER_EMAIL = 'ji@sungb.in'
+    PUBLISH_SCM_CONNECTION = 'scm:git:github.com/jisungbin/logeukes.git'
+    PUBLISH_SCM_DEVELOPER_CONNECTION = 'scm:git:ssh://github.com/jisungbin/logeukes.git'
+    PUBLISH_SCM_URL = 'https://github.com/jisungbin/erratum/tree/master'
+}
+
+apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
 
 android {
     compileSdk 31
@@ -9,18 +27,12 @@ android {
     defaultConfig {
         minSdk 23
         targetSdk 31
+        versionCode 1
+        versionName "1.0"
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-
-    kotlinOptions {
-        jvmTarget = '11'
-    }
-}
-
-dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
 }
